--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build the app
-        run: npm run build
+      # - name: Build the app
+      #   run: npm run build
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
